<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">好天气</string>
    <string name="action_settings">Settings</string>
    
    <string name="author">haotianqi.com\t作者：Luoyangs</string>
    <string name="homep_menu">菜单</string>
    <string name="today_can">历史今天</string>
    <string name="weather">天气预报</string>
    <string name="pleaseinput">请输入城市名:</string>
    <string name="search">查询</string>
    <string name="citymanager">城市管理</string>
    <string name="pollution_no">空气清新</string>
    <string name="pollution_little">空气良好</string>
    <string name="pollution_mild">轻度污染</string>
    <string name="polltion_moderate">中度污染</string>
    <string name="polltion_severe">重度污染</string>
    <string name="edittext_hint">请输入城市名</string>
    <string name="net_fail">网络请求失败</string>
    <string name="click_exit">再次按下程序退出</string>
    <string name="no_data">暂无数据</string>
    <string name="color_green">#00FF00</string>
    <string name="color_gandb">#00FFFF</string>
    <string name="color_orange">#FF9F00</string>
    <string name="color_red">#FF0000</string>
    <string name="color_balck">#000000</string>
    <string name="color_bottombg">#B3D7F3</string>
    <string name="color_bottombgn">#888888</string>
    <string name="getdata_fail">获取数据失败</string>
    <string name="input_truename">请输入正确的城市名</string>
    <string name="city_default">北京</string>
    <string name="set_normal">设为默认</string>
    <string name="launch_o">好</string>
    <string name="launch_weather">天气</string>
    <string name="launch_guan">观</string>
    <string name="add_city_text">热门城市</string>

    <!-- 背景图片集合 -->
    <string-array name="bg_image_attr">
        <item>@drawable/bg_homepager_blur</item>
        <item>@drawable/bg_rain_blur</item>
        <item>@drawable/bg_sand_storm_blur</item>
        <item>@drawable/bg_snow_blur</item>
        <item>@drawable/bg_yin_blur</item>
        <item>@drawable/bg_snow_2</item>
    </string-array>
    
</resources>