<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_launch" >

    <ImageView
        android:id="@+id/guano_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/guano_icon" />

    <TextView
        android:id="@+id/o"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_below="@id/guano_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/launch_otext_bg"
        android:gravity="center"
        android:text="@string/launch_o"
        android:textColor="#fff"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/o"
        android:layout_centerHorizontal="true"
        android:text="@string/launch_weather"
        android:textColor="#fff"
        android:textSize="36sp" />

    <com.haoxue.haotianqi.view.LoadingView
        android:id="@+id/loadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather"
        android:layout_centerHorizontal="true"
        app:loadingText="加载中..." />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12sp"
        android:text="@string/author"
        android:textColor="#fff"
        android:textSize="12sp" />

</RelativeLayout>