<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_homepager_blur"
    android:paddingTop="10dp" >

    <include
        android:id="@+id/homep_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/homepager_title_menu" />

    <FrameLayout
        android:id="@+id/fragmentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_bottom_menu_bar"
        android:layout_below="@+id/homep_title"
        android:paddingTop="10sp" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/home_bottom_menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#B3D7F3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bottom_todaycan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/today_can"
                android:textColor="#888"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bottom_weathertext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/weather"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bottom_citymanager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/citymanager"
                android:textColor="#888"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>